@@ -1,0 +1,8 @@
+Contributing to open_id_authentication:
+
+1. Fork the [official repository](http://github.com/Velir/open_id_authentication/tree/master).
+2. Make your changes in a topic branch.
+3. Send a pull request.
+
+Notes:
+* Please don't update the Gem version.
