@@ -1,18 +1,12 @@
-if config.respond_to?(:gems)
-  config.gem 'ruby-openid', :lib => 'openid', :version => '>=2.0.4'
-else
-  begin
-    require 'openid'
-  rescue LoadError
-    begin
-      gem 'ruby-openid', '>=2.0.4'
-    rescue Gem::LoadError
-      puts "Install the ruby-openid gem to enable OpenID support"
-    end
-  end
+if Rails.version < '3'
+  config.gem 'rack-openid', :lib => 'rack/openid', :version => '>=0.2.1'
 end
 
-config.to_prepare do
+require 'open_id_authentication'
+
+config.middleware.use OpenIdAuthentication
+
+config.after_initialize do
   OpenID::Util.logger = Rails.logger
-  ActionController::Base.send :include, OpenIdAuthentication
+  ActionController::Base.send :include, OpenIdAuthentication::ControllerMethods
 end
