@@ -1,0 +1,4 @@
+module OpenIdAuthentication
+  VERSION = "1.1.0"
+end
+  
